# https://doc.rust-lang.org/cargo/reference/profiles.html
# https://doc.rust-lang.org/book/ch14-02-publishing-to-crates-io.html

[package]
name = "rust_notes"
version = "0.1.0"
edition = "2024"
authors = ["leoliu <jafee201153@gmail.com>"]
description = "A collection of Rust notes and examples."
license = "MIT"
repository = ""

[dependencies]
rand = "0.8.5"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
